...
    case businessCard = "business-card"

    public var id: String { rawValue }

    public var displayName: String {
        switch self {
        case .regularTextNote: return "Text Note"
        case .businessCard: return "Business Card"
        }
    }

    public var systemImage: String {
        switch self {
        case .regularTextNote: return "doc.text"
...
